--- a/ControleFinanceiro/Telas/EntidadePage.xaml
+++ b/ControleFinanceiro/Telas/EntidadePage.xaml
@@ -60,7 +60,7 @@
                     <controls:DataGrid  x:Name="dtgPrincipal"
                                         Grid.Row="2"
                                         Margin="0,16,0,0"
-                                        Background="{StaticResource Cinza10Transp50}"
+                                        Background="{StaticResource Nenhuma}"
                                         AutoGenerateColumns="False"
                                         CanUserSortColumns="True"
                                         CanUserResizeColumns="True"
