--- a/ControleFinanceiro/Telas/CategoriaPage.xaml
+++ b/ControleFinanceiro/Telas/CategoriaPage.xaml
@@ -18,66 +18,67 @@
                 <ColumnDefinition Width="15*"/>
             </Grid.ColumnDefinitions>
 
-
-            <Grid Grid.Column="1" Padding="16" Background="{StaticResource Cinza9Transp10}">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <Grid Grid.Column="1" Grid.Row="0" Padding="16,16,16,0" Margin="0,8,0,0" CornerRadius="8,8,0,0" Background="{StaticResource Cinza9Transp10}">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="10*"/>
-                    <RowDefinition Height="80*"/>
-                    <RowDefinition Height="10"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
 
-                <Grid Grid.Row="1" RowSpacing="24">
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="Auto"/>
-                        <RowDefinition Height="*"/>
-                    </Grid.RowDefinitions>
+                <StackPanel x:Name="spNome" Grid.Row="0" Spacing="8">
+                    <TextBlock x:Name="txtTitulo" Text="Categoria:" FontSize="16" Foreground="{StaticResource Cinza2}" FontWeight="Bold"/>
+                    <TextBox x:Name="txtNome" Text="{Binding Nome, Mode=TwoWay}" IsEnabled="{Binding HabilitarNome}" MaxLength="30"/>
+                    <TextBlock x:Name="txtErro" Text="! Erros" Padding="8,0,0,0" Foreground="{StaticResource Vermelho1}"/>
+                </StackPanel>
 
-                    <StackPanel x:Name="spNome" Grid.Row="0">
-                        <TextBlock x:Name="txtTitulo" Text="Categoria:"/>
-                        <TextBox x:Name="txtNome" Text="{Binding Nome, Mode=TwoWay}" IsEnabled="{Binding ExibeBotoesConfirmacao}" MaxLength="30"/>
-                        <TextBlock x:Name="txtErro" Text="Erros"/>
-                    </StackPanel>
+                <StackPanel x:Name="spBotoes" Grid.Row="1" HorizontalAlignment="Right" Orientation="Horizontal" Spacing="8">
+                    <Button x:Name="btnDeletar" Height="34" Width="34" Padding="0" Margin="0" Click="btnDeletar_Click" Visibility="{Binding ExibeBotoesCrud}" IsEnabled="{Binding HabilitaBotaoEditarExcluir}">
+                        <FontIcon Glyph="&#xE74D;" FontSize="16"/>
+                    </Button>
+                    <Button x:Name="btnEditar" Height="34" Width="34" Padding="0" Margin="0" Click="btnEditar_Click" Visibility="{Binding ExibeBotoesCrud}" IsEnabled="{Binding HabilitaBotaoEditarExcluir}">
+                        <FontIcon Glyph="&#xE70F;" FontSize="16"/>
+                    </Button>
+                    <Button x:Name="btnAdicionar" Height="34" Width="34" Padding="0" Margin="0" Style="{StaticResource AccentButtonStyle}" Click="btnAdicionar_Click" Visibility="{Binding ExibeBotoesCrud}">
+                        <FontIcon Glyph="&#xE710;" FontSize="16"/>
+                    </Button>
+                    <Button x:Name="btnCancelar" Height="34" Width="34" Padding="0" Margin="0" Click="btnCancelar_Click" Visibility="{Binding ExibeBotoesConfirmacao}">
+                        <FontIcon Glyph="&#xE711;" FontSize="16"/>
+                    </Button>
+                    <Button x:Name="btnSalvar" Height="34" Width="34" Padding="0" Margin="0" Style="{StaticResource AccentButtonStyle}" Click="btnSalvar_Click" Visibility="{Binding ExibeBotoesConfirmacao}">
+                        <FontIcon Glyph="&#xE74E;" FontSize="16"/>
+                    </Button>
+                </StackPanel>
 
-                    <StackPanel x:Name="spBotoes" Grid.Row="1" HorizontalAlignment="Right" Orientation="Horizontal" Spacing="8">
-                        <Button x:Name="btnDeletar" Height="34" Width="34" Padding="0" Margin="0" Click="btnDeletar_Click" Visibility="{Binding ExibeBotoesCrud}" IsEnabled="{Binding HabilitaBotaoEditarExcluir}">
-                            <FontIcon Glyph="&#xE74D;" FontSize="16"/>
-                        </Button>
-                        <Button x:Name="btnEditar" Height="34" Width="34" Padding="0" Margin="0" Click="btnEditar_Click" Visibility="{Binding ExibeBotoesCrud}" IsEnabled="{Binding HabilitaBotaoEditarExcluir}">
-                            <FontIcon Glyph="&#xE70F;" FontSize="16"/>
-                        </Button>
-                        <Button x:Name="btnAdicionar" Height="34" Width="34" Padding="0" Margin="0" Click="btnAdicionar_Click" Visibility="{Binding ExibeBotoesCrud}">
-                            <FontIcon Glyph="&#xE710;" FontSize="16"/>
-                        </Button>
-                        <Button x:Name="btnCancelar" Height="34" Width="34" Padding="0" Margin="0" Click="btnCancelar_Click" Visibility="{Binding ExibeBotoesConfirmacao}">
-                            <FontIcon Glyph="&#xE711;" FontSize="16"/>
-                        </Button>
-                        <Button x:Name="btnSalvar" Height="34" Width="34" Padding="0" Margin="0" Style="{StaticResource AccentButtonStyle}" Click="btnSalvar_Click" Visibility="{Binding ExibeBotoesConfirmacao}">
-                            <FontIcon Glyph="&#xE74E;" FontSize="16"/>
-                        </Button>
-                    </StackPanel>
+                <controls:DataGrid  x:Name="dtgPrincipal"
+                                    Grid.Row="2"
+                                    Margin="0,16,0,0"
+                                    Background="{StaticResource Nenhuma}"
+                                    AutoGenerateColumns="False"
+                                    CanUserSortColumns="True"
+                                    CanUserResizeColumns="False"
+                                    CanUserReorderColumns="False"
+                                    IsReadOnly="True"
+                                    SelectionMode="Single"
+                                    HeadersVisibility="Column"
+                                    RowDetailsVisibilityMode="Collapsed"
+                                    SelectionChanged="dtgPrincipal_SelectionChanged"
+                                    GridLinesVisibility="All">
+                    <controls:DataGrid.Columns>
+                        <controls:DataGridTextColumn x:Name="colPK_Categoria" Visibility="Collapsed" Header="PK_Categoria" Binding="{Binding PK_Categoria}" Width="120"/>
+                        <controls:DataGridTextColumn x:Name="colCategoria" Header="Categoria" Binding="{Binding Nome}" Width="*"/>
+                    </controls:DataGrid.Columns>
 
-                    <controls:DataGrid  x:Name="dtgPrincipal"
-                                        Grid.Row="2"
-                                        Margin="0,16,0,0"
-                                        Background="{StaticResource Nenhuma}"
-                                        AutoGenerateColumns="False"
-                                        CanUserSortColumns="True"
-                                        CanUserResizeColumns="True"
-                                        IsReadOnly="True"
-                                        SelectionMode="Single"
-                                        HeadersVisibility="Column"
-                                        RowDetailsVisibilityMode="Collapsed"
-                                        SelectionChanged="dtgPrincipal_SelectionChanged"
-                                        GridLinesVisibility="All">
-                        <controls:DataGrid.Columns>
-                            <controls:DataGridTextColumn x:Name="colPK_Categoria" Visibility="Collapsed" Header="PK_Categoria" Binding="{Binding PK_Categoria}" Width="120"/>
-                            <controls:DataGridTextColumn x:Name="colCategoria" Header="Categoria" Binding="{Binding Nome}" Width="*"/>
-                        </controls:DataGrid.Columns>
-
-                    </controls:DataGrid>
-                </Grid>
+                </controls:DataGrid>
             </Grid>
+
+            <Frame Grid.Row="2" Grid.Column="1" Background="{StaticResource Cinza11}" CornerRadius="0,0,8,8" Margin="0,0,0,8" MinHeight="32" Padding="16,0">
+                <TextBlock Text="{Binding Total}" HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="{StaticResource Cinza3}" FontSize="10"/>
+            </Frame>
         </Grid>
     </Grid>
 </Page>
