--- a/ControleFinanceiro/Telas/OperacaoPage.xaml
+++ b/ControleFinanceiro/Telas/OperacaoPage.xaml
@@ -349,6 +349,7 @@
                     Margin="0,16,0,0"
                     Background="{StaticResource Nenhuma}"
                     AutoGenerateColumns="False"
+                    CanUserReorderColumns="False"
                     CanUserSortColumns="True"
                     CanUserResizeColumns="False"
                     IsReadOnly="True"
