--- a/ControleFinanceiro/Componentes/NotificacaoUserControl.xaml
+++ b/ControleFinanceiro/Componentes/NotificacaoUserControl.xaml
@@ -12,35 +12,18 @@
           Padding="8"
           ColumnSpacing="8"
           CornerRadius="0,4,0,8"
-          BorderBrush="{Binding CorNotificacao}"
           BorderThickness="6,0,0,1"
           Background="{StaticResource Cinza11Transp20}"
           VerticalAlignment="Bottom"
           HorizontalAlignment="Right">
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="258"/>
-            <ColumnDefinition Width="34"/>
-        </Grid.ColumnDefinitions>
 
-        <TextBlock x:Name="MessageText"                 
+        <TextBlock x:Name="txtNotificacao"                 
                    MaxWidth="258"
                    TextWrapping="Wrap"
                    Grid.Column="0"
-                   Text="{Binding Mensagem}"
+                   Text=""
                    Foreground="{StaticResource Branco}"
                    HorizontalAlignment="Left"
                    VerticalAlignment="Center"/>
-
-        <Button Grid.Column="1"
-                Height="34"
-                Width="34"
-                Padding="0"
-                Style="{StaticResource DefaultButtonStyle}"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                BorderThickness="0"
-                Click="Close_Click">
-            <FontIcon Glyph="&#xE8BB;" FontSize="12"/>
-        </Button>
     </Grid>
 </UserControl>
