--- a/ControleFinanceiro/MainWindow.xaml
+++ b/ControleFinanceiro/MainWindow.xaml
@@ -41,6 +41,7 @@
               VerticalAlignment="Bottom"
               HorizontalAlignment="Right"
               Margin="0,0,20,20"
+              RowSpacing="8"
               Background="Transparent"
               IsHitTestVisible="True">
             <Grid.RowDefinitions>
