--- a/ControleFinanceiro/Telas/CategoriaPage.xaml
+++ b/ControleFinanceiro/Telas/CategoriaPage.xaml
@@ -23,7 +23,7 @@
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
 
-            <Grid Grid.Column="1" Grid.Row="0" Padding="16,16,16,0" Margin="0,8,0,0" CornerRadius="8,8,0,0" Background="{StaticResource Cinza9Transp10}" BorderThickness="1" BorderBrush="{StaticResource Cinza11}">
+            <Grid Grid.Column="1" Grid.Row="0" Padding="16,16,16,0" RowSpacing="16" Margin="0,8,0,0" CornerRadius="8,8,0,0" Background="{StaticResource Cinza9Transp10}" BorderThickness="1" BorderBrush="{StaticResource Cinza11}">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
                     <RowDefinition Height="Auto"/>
@@ -33,7 +33,6 @@
                 <StackPanel x:Name="spNome" Grid.Row="0" Spacing="8">
                     <TextBlock x:Name="txtTitulo" Text="Categoria:" FontSize="16" Foreground="{StaticResource Cinza2}" FontWeight="Bold"/>
                     <TextBox x:Name="txtNome" Text="{Binding Nome, Mode=TwoWay}" IsEnabled="{Binding HabilitarNome}" MaxLength="30"/>
-                    <TextBlock x:Name="txtErro" Text="! Erros" Padding="8,0,0,0" Foreground="{StaticResource Vermelho1}"/>
                 </StackPanel>
 
                 <StackPanel x:Name="spBotoes" Grid.Row="1" HorizontalAlignment="Right" Orientation="Horizontal" Spacing="8">
@@ -56,7 +55,6 @@
 
                 <controls:DataGrid  x:Name="dtgPrincipal"
                                     Grid.Row="2"
-                                    Margin="0,16,0,0"
                                     Background="{StaticResource Nenhuma}"
                                     AutoGenerateColumns="False"
                                     CanUserSortColumns="True"
